Added content to the third recepie (Chicken Parmesan)

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
     <ul>
         <h2>
-            <a href="./recepies/nashville-hot-chicken.html" target="_blank" rel="noopener noreffer">Nashville Hot Chicken</a>
+           <li> <a href="./recepies/nashville-hot-chicken.html" target="_blank" rel="noopener noreffer">Nashville Hot Chicken</a> </li>
         </h2>
         <h2>
-            <a href="./recepies/garlic-fried-chicken.html" target="_blank" rel="noopener noreffer">Garlic Friend Chicken</a>
+            <li> <a href="./recepies/garlic-fried-chicken.html" target="_blank" rel="noopener noreffer">Garlic Friend Chicken</a> </li>
         </h2>
         <h2>
-            <a href="./recepies/chicken-parm.html" target="_blank" rel="noopener noreffer">Chicken Parmesan</a>
+            <li> <a href="./recepies/chicken-parm.html" target="_blank" rel="noopener noreffer">Chicken Parmesan</a> </li>
         </h2>
     </ul>
 </body>
