--- a/recepies/nashville-hot-chicken.html
+++ b/recepies/nashville-hot-chicken.html
@@ -18,7 +18,7 @@
             restaurants and in home kitchens.
         </p>
     </text>
-    <img src="../images/nashville-hot-chicken.webp">
+    <img src="../images/nashville-hot-chicken.webp" height="360">
     <h2>Ingredients</h2>
     <ul>
         <li>1 whole chicken, cut into 8 pieces</li>
